--- a/recuperar contraseña.html
+++ b/recuperar contraseña.html
@@ -2,6 +2,21 @@
 <html>
 <head>
 	<title>Recuperar Contraseña</title>
+	<link rel="shotcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
+	<link rel="stylesheet" href="estilos.css">
+	
+	<header>
+		<nav class="navbar">
+		  <div class="contenedor">
+			<a href="inicio.html">Inicio</a>
+			<a href="carrito de compras.html">Carrito de compras</a>
+			<center href="#"> <img src="logo/logo silque pmg.png" width="100" height="100"alt="logo" class="center"></center>
+			<a href="venta por categoria.html">Categorias de libros</a>
+			<a href="ver perfil de usuario.html">Perfil </a>
+			<a href="inicio de sesion.html">Inicio de sesion y registrar </a>
+		  </div>
+		</header>
+
 	<style>
 		form {
 			display: flex;
