--- a/venta por categoria.html
+++ b/venta por categoria.html
@@ -1,4 +1,28 @@
-<ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Venta</title>
+  <link rel="shotcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
+  <link rel="stylesheet" href="/CSS/universal.css">
+  <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+  <header>
+  <nav class="navbar">
+    <div class="contenedor">
+      <a href="inicio.html">Inicio</a>
+      <a href="carrito de compras.html">Carrito de compras</a>
+      <center href="#"> <img src="logo/logo silque pmg.png" width="100" height="100"alt="logo" class="center"></center>
+      <a href="venta por categoria.html">Categorias de libros</a>
+      <a href="ver perfil de usuario.html">Perfil </a>
+      <a href="inicio de sesion.html">Inicio de sesion y registrar </a>
+    </div>
+  </header>
+
+  <ul>
     <li><a href="#">Acción</a></li>
     <li><a href="#">Romance y erótica</a></li>
     <li><a href="#">Ciencia ficción y fantasía</a></li>
@@ -6,7 +30,8 @@
     
   </ul>
   
-
+  
+</header>
 <div class="product-list-container">
     <h2>Libros disponibles</h2>
     <div class="product-list">
@@ -56,3 +81,7 @@
     </div>
   </div>
   
+  
+</body>
+</html>
+
