--- a/carrito de compras.html
+++ b/carrito de compras.html
@@ -1,4 +1,113 @@
-<div class="cart-container">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carrito de Compras</title>
+  <link rel="shortcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
+  <link rel="stylesheet" href="estilos.css">
+
+  </head>
+  <body>
+  <header>
+		<nav class="navbar">
+			<div class="contenedor">
+			  <a href="inicio.html">Inicio</a>
+			  <a href="carrito de compras.html">Carrito de compras</a>
+			  <center href="#"> <img src="logo/logo silque pmg.png" width="100" height="100"alt="logo" class="center"></center>
+			  <a href="venta por categoria.html">Categorias de libros</a>
+			  <a href="ver perfil de usuario.html">Perfil </a>
+			  <a href="inicio de sesion.html">Inicio de sesion y registrar </a>
+			</div>
+	</header>
+  <div class="cart-container">
+    <h2>Carrito de compras</h2>
+    <table>
+      <!-- ... -->
+    </table>
+    <div class="mensaje-vacio">
+      <p>Tu carrito de compras está vacío. Agrega algunos productos para continuar.</p>
+    </div>
+    <div class="btn-container">
+      <a href="venta por categoria.html">Seguir comprando</a>
+      <a href="carrito de compras.html">Comprar</a>
+    </div>
+  </div>
+  
+  <style>
+    .cart-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 50px;
+      background-color: #f2f2f2;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      width: 80%;
+      font-family: Arial, sans-serif;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 20px 0;
+    }
+
+    th, td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    td input[type="number"] {
+      width: 50px;
+      padding: 5px;
+      border-radius: 5px;
+      border: none;
+      text-align: center;
+      font-size: 16px;
+    }
+
+    td input[type="number"]:focus {
+      outline: none;
+    }
+
+    tfoot td:first-child {
+      font-weight: bold;
+    }
+
+    .btn-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    .btn-container a {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+      border: none;
+      text-decoration: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    .btn-container a:hover {
+      background-color: #3e8e41;
+    }
+  </style>
+</head>
+<body>
+  <div class="cart-container">
     <h2>Carrito de compras</h2>
     <table>
       <thead>
@@ -10,33 +119,56 @@
         </tr>
       </thead>
       <tbody>
+        
         <tr>
           <td>nombredelibro</td>
           <td><input type="number" value="1"></td>
           <td>$20.00</td>
           <td>$20.00</td>
+          <td><button class="eliminar">Eliminar</button></td>
         </tr>
-        <tr>
-          <td>nombredelibro</td>
-          <td><input type="number" value="2"></td>
-          <td>$40.00</td>
-          <td>$80.00</td>
-        </tr>
+        <!-- ... -->
         <tr>
           <td>nombredelibro</td>
           <td><input type="number" value="1"></td>
-          <td>$60.00</td>
-          <td>$60.00</td>
+          <td>$20.00</td>
+          <td>$20.00</td>
+          <td><button class="eliminar">Eliminar</button></td>
         </tr>
+        <!-- ... -->
+        <tr>
+          <td>nombredelibro</td>
+          <td><input type="number" value="1"></td>
+          <td>$20.00</td>
+          <td>$20.00</td>
+          <td><button class="eliminar">Eliminar</button></td>
+        </tr>
+        <!-- ... -->
       </tbody>
       <tfoot>
         <tr>
           <td colspan="3">Total</td>
           <td>$160.00</td>
         </tr>
-      </tfoot>
-    </table>
-    <a button href="carrito de compras.html" class="vinculo">Realizar compra</button> <br> 
-    <a button  href="venta por categoria.html" class="vinculo">Seguir viendo</button>
-  </div>
-  
+        <div class="cart-container">
+          <h2>Carrito de compras</h2>
+          <table>
+            <!-- ... -->
+          </table>
+          <div class="btn-container">
+            <a href="carrito de compras.html">Vaciar carrito</a>
+            <a href="venta por categoria.html">Seguir comprando</a>
+            <a href="pagoquevafuturo">Pagar</a>
+          </div>
+        </div>
+
+
+        <!---const btnVaciar = document.querySelector('.btn-container a[href="#"]');
+        const tbody = document.querySelector('tbody');
+        
+        btnVaciar.addEventListener('click', () => {
+          tbody.innerHTML = '';
+        });-->
+
+      </body>
+    </html>
