--- a/Modificar contraseña.html
+++ b/Modificar contraseña.html
@@ -4,6 +4,7 @@
 	<title>Modificar Contraseña</title>
 	<link rel="shotcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
 	<link rel="stylesheet" href="estilos.css">
+	<link rel="stylesheet" href="CSS/css/bootstrap.css">vv
 
 	<header>
 		<nav class="navbar">
