--- a/carrito de compras.html
+++ b/carrito de compras.html
@@ -6,6 +6,7 @@
   <title>Carrito de Compras</title>
   <link rel="shortcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
   <link rel="stylesheet" href="estilos.css">
+  <link rel="stylesheet" href="CSS/css/bootstrap.css">
 
   </head>
   <body>
