--- a/inicio de sesion.html
+++ b/inicio de sesion.html
@@ -4,6 +4,7 @@
 	<title>Iniciar Sesión</title>
 	<link rel="shotcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
 	<link rel="stylesheet" href="estilos.css">
+	<link rel="stylesheet" href="CSS/css/bootstrap.css">
 	<style>
 		/* Agregamos un contenedor que centra el formulario */
 		.contenedor-formulario {
