--- a/modificar perfil de usuario.html
+++ b/modificar perfil de usuario.html
@@ -4,7 +4,7 @@
 	<title>Modificar perfil de usuario</title>
 	<link rel="shotcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
 	<link rel="stylesheet" href="estilos.css">
-	
+	<link rel="stylesheet" href="CSS/css/bootstrap.css">
 	<header>
 		<nav class="navbar">
 			<div class="contenedor">
