--- a/registrar usuario.html
+++ b/registrar usuario.html
@@ -4,6 +4,7 @@
 	<title>Registro de Usuario</title>
 	<link rel="shotcut icon" href="logo/logo silque pmg.png" type="image/x-icon">
 	<link rel="stylesheet" href="estilos.css">
+	<link rel="stylesheet" href="CSS/css/bootstrap.css">
 
 	<header>
 		<nav class="navbar">
